--- a/Linear-Discriminant-Analysis/Linear-Discriminant-Analysis.ipynb
+++ b/Linear-Discriminant-Analysis/Linear-Discriminant-Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def LDA_tr( x ):\n",
+    "def LDA_tr( x , lamb=0.1 ):\n",
     "    num = np.zeros(len(x))\n",
     "    m = np.zeros( ( len(x) , np.shape(x[0])[1] ) )\n",
     "    S = np.zeros( (np.shape(x[0])[1]  , np.shape(x[0])[1]  , len(x)) )\n",
@@ -36,7 +36,7 @@
     "    Sw = S.mean(2)\n",
     "    M = np.dot( num , m )/num.sum()\n",
     "    Sb = np.dot(num*(m-M).T , (m-M))\n",
-    "    w = np.dot( inv( Sw + 0.1*np.eye(np.shape(Sw)[1]) ),Sb )\n",
+    "    w = np.dot( inv( Sw + lamb*np.eye(np.shape(Sw)[1]) ),Sb )\n",
     "    [a,b] = eig(w)\n",
     "    w = b[:,:6].real\n",
     "    flag = np.dot(m , w)\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -71,8 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_path = \"E://yuwoliang/three set/SpectralClassification/No removal of continuous spectrum/\"\n",
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
