--- a/Principal_Component_Analysis/PCA.ipynb
+++ b/Principal_Component_Analysis/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -16,22 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PCA(x, dim=3, t=0.95):\n",
+    "def PCA(x, dim=None, t=0.95):\n",
     "    M,D = x.shape\n",
     "    x = x - x.mean(0).reshape(1,-1)\n",
     "    cov = np.dot( x.T,x )\n",
     "    V,D = eig(cov)\n",
-    "    print(V.real.shape)\n",
-    "    return x"
+    "    V = V.real\n",
+    "    D = D.real\n",
+    "    if dim==None:\n",
+    "        t = 0.95\n",
+    "        dim = V.cumsum()/V.sum()\n",
+    "        dim = np.nonzero(dim>t)[0][0]\n",
+    "        print(dim)\n",
+    "    w = D[:,:dim]\n",
+    "    return w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -52,44 +59,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 78,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(481,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "w = PCA(train_x,t=0.3)"
+    "w = PCA(train_x,dim=2)\n",
+    "train_x = np.dot( train_x,w )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAD8CAYAAABw1c+bAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X+U3XV95/HnK5MbO0O7TiypLUMitKWwsgjRETzCsQar\nIFSJSg+gbf9oz+HQLT1LdzdrPMtRpO4xbv7Q7oplsxyO7fEHWIHZKGjUQmsXG82kCcQgsSko5OqW\nqIwVMspM8t4/7r2TO3e+33u/9/eP7+txDoe5936/M5/vZO77fr7vz+fz/igiMDOz/FjV7waYmVlv\nOfCbmeWMA7+ZWc448JuZ5YwDv5lZzjjwm5nljAO/mVnOOPCbmeWMA7+ZWc6s7ncDkpx66qlxxhln\n9LsZZmZDY+/evT+IiHVZjh3IwH/GGWcwOzvb72aYmQ0NSd/NeqxTPWZmOePAb2aWM5kCv6TLJR2S\ndFjS1pRjXi9pv6SDkv6umXPNzKx3Gub4JY0BtwFvBI4AeyTtjIjHqo6ZBD4GXB4RT0n6paznmplZ\nb2Xp8V8IHI6IJyLiBeAu4KqaY94J3BsRTwFExDNNnGtmZj2UJfBPAU9XPT5Sfq7abwBrJf2tpL2S\nfr+Jc83MrIc6NZ1zNfAq4A3AOPAPknY38w0kXQ9cD7Bhw4YONcvMzGpl6fEXgfVVj08vP1ftCLAr\nIp6PiB8AXwXOz3guABGxIyKmI2J63bpMaxDMzKwFWQL/HuAsSWdKWgNcC+ysOeb/AJdIWi1pArgI\n+FbGc83MrIcapnoiYlHSjcAuYAy4MyIOSrqh/PrtEfEtSV8EHgVOAHdExDcBks7t0rWYmVkGioh+\nt2GF6enpcMkGM7PsJO2NiOksx3rlrplZzgxkkTYbLjP7imzfdYjvzc1z2uQ4Wy47m80bPWvXbFA5\n1WNtmdlX5D33HmB+4fjScwICmPKHgFnPONVjPbN916FlQR9KQR+gODfPn969n5tnDvS+YWaWyoHf\n2vK9ufm6rwfwyd1PMbMvcfmGmfWBA7+1ZXKi0PCYoHRnYGaDwYHf2pJ1iKjRnYGZ9Y4Dv7Xlx/ML\nmY47bXK8yy0xs6w8ndNaNrOvyCqJ4w26/eOFMbZcdranfZoNCAd+a0llGmda0F8lOBEnp3QCy6Z9\nFufmec+9pdk+9YK/PyzMOs+pHmtJ0jTOaifiZE9/88apxOPnF47XHfStfLgU5+YJTn5YeIaQWXvc\n47eGknrdWQZr5xeOc9Pd+9m+6xDFlOPrfZ96Hxbu9Zu1zoHf6qpdmVvpdb94vMBcxoHd4tz80mre\nWvUGfdM+FDxDyKw9TvVYXWm9bqmUyskqKJVyqFZJBaVJ+1DwDCGz9jjwj6CZfUUu3vYgZ269n4u3\nPdhWTjytdz13bIEPvv08pibHETA5XqAwVhval6vU7xGwdqIABDfdvZ8ztt7Pxlu/tNTOmX1FLnj/\nlxLTQ40+LOrp5O/FbJhlSvVIuhz4c0qbqdwREdtqXn89pV24niw/dW9E3Fp+7TvAT4DjwGLWIkLW\nmrTUDNSfPZPmtMnxxAB82uQ4mzdOLfuelbGAtHz+1OQ4D2+9lJl9Rbb89SMsnDiZ/Hn22AJbPvsI\ns9/9EXd/4+llr1WsnSjwvrec29J1dPr3YjbMGvb4JY0BtwFvBl4OXCfp5QmH/n1EXFD+79aa1zaV\nn3fQ77JWZs/Us+Wys1ekdNJ63Zs3TvHw1kv5yDUX1D1n+65DiYF94Xjw6a8nB32AiTWrWw7Snf69\nmA2zLD3+C4HDEfEEgKS7gKuAx7rZMGtNpwdEK4G2mbn0jc6p15Z6i8HaGdT1QLHZSVkC/xTwdNXj\nI5Q2U6/1WkmPAkXgP1ftrRvAVyQdB/5XROxop8FWX73UTKtqUzrtnpPWRoCxOiuB27mGbvxezIZV\npwZ3/xHYEBGvAP4nMFP12iURcQGlVNEfS3pd0jeQdL2kWUmzR48e7VCz8qeZ1Ey/bDpnXeLzhTFx\n3UXrKaxaOUhcGNPSNbQySDsMvxezXskS+IvA+qrHp5efWxIR/xoRz5W/fgAoSDq1/LhY/v8zwH2U\nUkcrRMSOiJiOiOl165IDgzW2eePUstk2U5PjfPDt5w3MAObMviL37F0ZqE9ZM8b2q8/nA5vPY/vv\nnM/k+Mlyz2snCmy/+nw2b5xqeTXvoP9ezHqp4daLklYD3wbeQCng7wHeWZXKQdIvA/8SESHpQuCz\nwMuACWBVRPxE0inAl4FbI+KL9X6mt14cXRdvezAx5VKZ8dPt881GVTNbLzbM8UfEoqQbgV2UpnPe\nGREHJd1Qfv124GrgjyQtAvPAteUPgZcC90mq/KxPNQr6NtraHWT1IK1Z+zLN4y+nbx6oee72qq8/\nCnw04bwngPPbbKONkHYHWT1Ia9Y+r9y1nmp2kLV2IHfTOes8SGvWJhdpy7F+1LqvN8e/tj2bzlnH\nPXuLy1bb3rO3yDteNcVDjx/N3G7X9DdbruHgbj94cLf7aksYQKnn3K+ZLkntSavoCSc3eElqa3Wg\nf/F4gedfWGTh+Mnv1M/rNOuWZgZ3nerJqUErYZDUnnpdkrRpnLXTPefmF5YFfXCpBjMH/pwatNkx\nrfzcykYv1Yu4Gu0M1s7PMxsVzvGPkGZy2ZMTBZ49tnIjlcmJQsLR3W9b2mydeumeiupKm1kDumcB\nWZ65xz8iml3Rmja0040hnyxtS5vt867XbGAqQ5Cu9P5Xqf6eAJXv61lAlmcO/COi2Zz9j1O2TUx7\nvtttSyup8IHN56WWek6SVOCtsEqsnSi4VINZmVM9I6LZnH0vF0JlbVu9ip7V00DTKnsmEXDNhev5\nwObzEl/3VE/LI/f4R0Sz+9P2slplp/bOrbfRS5oAHno8udprqwXfzIadA/+IaDaQ97JaZac/ZKrb\nnsX35uYTSzkP2pRWs17xAq4RMmhpi9qFVFJpk/ZOti1p4VetyfECP1s8sWKxWto5Ap7cdmXbbTPr\npY5W57Th0cpOWd1SG5Dn5hcYL4zx4Wsu6Ggba3P/tdM/xwtjSCT27NN2+/JUTxt1TvVYV/QyjVLJ\n/X9n25V8+JoLVqSv5hLWK0BpBpALvlkeucc/RAYtlVNPv1YGJ931pM0EqtT7GZbfqVmnOPAPidrU\nSfVq1UEMVINUN3/LZWcnFqSrBPlB/P2ZdVOmVI+kyyUdknRY0taE118v6ceS9pf/e2/Wcy2bYZuB\nMkibm3u/XbPlGvb4JY0BtwFvBI4AeyTtjIjHag79+4j47RbPtQbSUiTF8lTFQQti9eru96s9lZ9d\nSZn96d37+94us37Ikuq5EDhc3kYRSXcBVwFZgnc751qVtNQJMLApn0FMowxbysysG7KkeqaAp6se\nHyk/V+u1kh6V9AVJ5zZ5LpKulzQrafbo0eSVlnmWlDqpGOSUz6AZtpSZWTd0anD3H4ENEfGcpCuA\nGeCsZr5BROwAdkBpAVeH2jUyKr3Rm+7en/h6K7NlhmmWUKcM2j4Eefw3sP7L0uMvAuurHp9efm5J\nRPxrRDxX/voBoCDp1CznWnPGUsoONztbJq91ajpVN6gT8vpvYP2XJfDvAc6SdKakNcC1wM7qAyT9\nslSKSJIuLH/fH2Y517KpBImklaatzJbJa8pjkGYb5fXfwPqvYaonIhYl3QjsAsaAOyPioKQbyq/f\nDlwN/JGkRWAeuDZKRYASz+3StYy0tC0Fx6SWpiYOWsqjVyq/p/d/7uDSDmQvWt2fBex5/Tew/suU\n4y+nbx6oee72qq8/Cnw067nWvLRgcCKipZxw2iyhVRJnbr1/5PPNP104sfT13PwCW/76Ed7/uYMd\nLyJXzyAtcrN8ca2eIdHp3HTaLKHjESOfb066e1o4ETx7bKGn1z5IaSfLFwf+IdHNmvYiedB4VPPN\nWVIpvbh2ryi2fnE9/iHSzal/Z269n6S/hFGsTX/xtgczb98o6NpeAmad5Hr8I6qbK2HzlG9OKtqW\nJiiNAVR4pa+NAqd6ciRp+8GKPOWba1Msk+MFCmPJ6yOStJIGqve7N+s19/hzolGNmkErqtZttXdP\nN88c4JO7n0pMdyXJmioC1weywePAnxP1FgtVgs8gFlXrlYceP5o56EMp959Vlt+9WS858OeEFwvV\n1+zvISCxHHbSALx/9zZonOPPiUGqUTOIWvk91Ob502rvvHi80LGfadYJDvw5kafB2yxqB1s3nbNu\nxe+nUTqntseeltKR8O/eBooDf054sdBJST3ze/YWecerppgq98IFDXP+tT32tAHfuWMLS797KC2W\nm184zn/6zCOc4Vk+1gfO8edIngdvq6X1zB96/CgPb7000wKvwph4/meLS3WNNp2zLvXDYlV5VXTt\n+oFKpdWss3xcu986xYHfcqfRYGu9QVcBkxMFnvvp4tLCruLcfN2poMcjeM+9B/i5wqrURWONZvl4\nSqh1klM9ljuNBrrTXp+aHOfJbVcSUSrqVq1RWmh+4fhSGeg09T5wXLvfOsmB33Kn0UB3vddn9hWX\nlXDopBePFxJX987sK6amnjwl1FqRKdUj6XLgzyltpnJHRGxLOe7VwD9Q2ojls+XnvgP8BDgOLGYt\nImTWLdWrlItz80uDrZXec71VzBdvezD1+2YZEK5nbn5hWfroPfceYPa7P+KevekDv54Saq1oGPgl\njQG3AW8EjgB7JO2MiMcSjvsQ8KWEb7MpIn7Qgfaatax2cHTTOeu4Z2+xYRmLavV62O96zQYeevwo\nxbn5tj8EoJTK+fTXn07cbhM8JdRal6XHfyFwOCKeAJB0F3AV8FjNcX8C3AO8uqMtNOuApMHRpAHZ\nRoOsaVVM104U+MDm85b9vJvu3p/anqnJ8aUPoGMvLKbm/9OCPpDb6bjWviw5/ing6arHR8rPLZE0\nBbwN+IuE8wP4iqS9kq5vtaFm7UgaHE0LqfV69Wn5//e95dxlz23eeHJNQK2pyXEe3nopT267koe3\nXspcnUHfpA1yKt/DQd9a1anB3Y8A746IEwmvXRIRFwBvBv5Y0uuSvoGk6yXNSpo9evRoh5plVtLM\nIGi9vHkzC+GyrpZO+3kCrrtofcurfm+eOcCvvecBzth6P7/2nge4eeZAw3MsH7KkeorA+qrHp5ef\nqzYN3KVS7+RU4ApJixExExFFgIh4RtJ9lFJHX639IRGxA9gBpR24mr0Qs3rSUjS1ufgsQTXrQris\npa6TNoYRpTGDD2w+j+mXvaTphVs3zxzgE7ufWnp8PGLpcXVKyvKp4daLklYD3wbeQCng7wHeGREH\nU47/OPD5iPispFOAVRHxk/LXXwZujYgv1vuZ3nrROq02xw+lIP+OV03x0ONH+74a9uaZA0sDuWMS\n1120PnOAntlX5JadB5dmBK2dKPDj+QVOJLy1xyT++YNXdLLpNiA6uvViRCxKuhHYRWk6550RcVDS\nDeXXb69z+kuB+8p3AquBTzUK+mbdMMgbzczsK3LP3uLSQO7xCO7ZW2T6ZS9p2L6ZfUW2/PUjyxaU\n1VsoVm+wOGtbB/F3aM3xZutmfZZWG6gyCNzKuWna6fGn3TV5dtFgaKbH75W7Zn3WzkYtza7cve6i\n9Y0PSuGyEaPDgd+sz9rZJKfeMeOFVUvTQcckfrc8WNwq7yQ2Olyd06zPkmb1ZJ2yueWys1fk+KFU\nNvqDb39F0ymYejn8tJlRLhsxfNzjN+uzdjbJ2bxxiu2/cz4ThZNvZQmuefX6loJ+0taRlWJxSesS\nKB+38dYveTOZIeIef5clTbV731vO9WCYLdPuJjlRtVFkBE3NCqr++6xVXcKi8r3e/7mDK2YOPXts\ngS2ffWTpWmywucffRTfPHOCmu/cve1NV3iDuHVmntDroWpkK2qjMdHUOf/PGKSbWJPcXF46HB3qH\nhAN/l8zsK/LJqpWT1fwGsU5qddB1+65DK8YGktTm8Ot9Xw/0DgcH/i7ZvutQ3bK8foNYp7Q6KyjL\n32AztYWgtL+w72YHnwN/lzR6U3kmhHVK1mJwtRr9DaYNMm+57GwKq5Krhlb2F3bwH2wO/F1S701V\nGJM30LCOaXVWUFoAL4yJj1xzAQ9vvTTxe1RmEk2OFxK/rxd1DT6XbOiSpOXtAC9avYoPvaP5+dVm\n3dDurLMzt96fmNIU8OS2KzvXUGuoo0XarDWbN04x+90frdjlaVXKxhr1uDCWdUu700i9qGs4OdXT\nRQ89fjR1a7+sGi2qMeuXmX1Fjr2wuOL5wipx7IVFztx6Pxdve9B/qwPIPf4umdlXTK2a2MyMnnpz\ntN3rt3a0cyeZlsocL6xi8UQsLfCq3cDeBoN7/F1QeVOkaeY22IWxrBvavZNM6pAAvLAYLBxffp/r\nwd7BkynwS7pc0iFJhyVtrXPcqyUtSrq62XNHSdqbArIX36pI+5AI8G20tazdEstpHY+0jV6a2TPA\nuq9h4Jc0BtxGabP0lwPXSXp5ynEfAr7U7Lmjpl5vvNlNK9IKY4Hz/da6du8kWxm83Xjrl5z3HxBZ\nevwXAocj4omIeAG4C7gq4bg/Ae4Bnmnh3JGS9qaYmhxvOs9ZPUc7iW+jrRXt7AEA9RdxpXn22IIn\nKAyILIF/Cni66vGR8nNLJE0BbwP+otlzR1GrKynTbN44xcNbLyXtbeZ8vzWr3b/RzRun+Pmfa31u\niDss/dWpwd2PAO+OiBOtfgNJ10ualTR79OjRDjWrP9qpr15Pu700s4pO/I3O1dnUPYvi3LzTPn2S\n5SO7CFRv1Hl6+blq08BdKi1OOhW4QtJixnMBiIgdwA4ordzN0vhB1u7CmCTt7NRkVqtbi7ea4eme\n/ZEl8O8BzpJ0JqWgfS3wzuoDIuLMyteSPg58PiJmJK1udK5lV3ljeBWvDYK0jsg7XjXF5x/5/lIZ\niInCKhZOrJzmWVGd9vHfdm9kqtUj6QpK6Zwx4M6I+G+SbgCIiNtrjv04pcD/2bRzG/28UajVU8tl\nF2wUZf27rhxX7w5hvDC24kOkEynSvGimVo+LtPVA0ipH/1FbHl287cHE4D8mJa4BmJoc5+Gtl/ai\naUOvmcDvlbs9kLZY5padB7l424Oe22y5kTabKG3hl2esdYcDfw+k/fHOzS+4+JrlStpsorR1KpMT\nyTX/rT0u0tYDWWc/uPia5UHabKItn31kxQDwcz9dZGZf0e+JDnOPv0Nm9hVT0zb1yi7U8q2t5dHm\njVOcsmZlP3ThRHihVxe4x98BtYO3lbTN7Hd/xEOPH+V7c/NMThR40epV/Hh+gdMmxzn2wuJS6dpq\nXoxlefXj+eQFYe4MdZ57/B2QNnj7yd1PLeXwnz22wM8WT/Dh8l6m73vLuR0t62A2zGb2FVN3p3Nn\nqPMc+DsgrUdSb/etbpV1MBs2lTvmpJk97gx1h1M9HdDM0vXqD4lulHUwGzZp+1eMSe4MdYl7/B2Q\nNHibVknTt61my6XdMZ+IWBb0602gsOY48HdAUtrmXa/Z4By+WQZZqs62u1WkLeeSDV1UW8dk0znr\nlmb5uF6PWUmWkiZppR7WThTY99439aytg6yZkg3O8XdRdQ4/bcpn5TizvMpSdTYtHfTssQUv8GqB\nA3+P1Nvc2n+0lneNJjrUm0Dh91DznOPvkXY3tzbLs3pjY34PNc89/h5J67F4lo9ZY5s3TnHLzoNL\nm7tUS3oPVdf/r5R8nvK42pJMPX5Jl0s6JOmwpK0Jr18l6VFJ+8v75l5S9dp3JB2ovNbJxg+TTm/A\nbpY3t7w122r36hlAwNLCMM8EOqlhj1/SGHAb8EbgCLBH0s6IeKzqsL8BdkZESHoF8BngnKrXN0XE\nDzrY7qHjbRPN2pP1PZS2IAw8rlaRJdVzIXA4Ip4AkHQXcBWwFPgj4rmq409hZbWCodeJrRO9Utes\nPVneQ41y/h4TyJbqmQKernp8pPzcMpLeJulx4H7gD6peCuArkvZKur6dxvZL0uKRP717PzfPHFh2\njFcVmvVfo81bPK7WwcHdiLgPuE/S64A/A36r/NIlEVGU9EvAlyU9HhFfrT2//KFwPcCGDRs61ayO\nSLp1DOCTu59i+mUvAfAcfbMBMLOvyHM/Xax7zKZz1vWoNYMrS4+/CKyvenx6+blE5aD+q5JOLT8u\nlv//DHAfpdRR0nk7ImI6IqbXrRusf5h61Te37zpUd46+mfXO9l2HWDhRP9P80ONHe9SawZUl8O8B\nzpJ0pqQ1wLXAzuoDJP26VCqmLemVwIuAH0o6RdIvlJ8/BXgT8M1OXkAv1Ls1LM7Npy4scS7RrLey\nvOeKc/O5T8k2DPwRsQjcCOwCvgV8JiIOSrpB0g3lw94BfFPSfkozgK6JUhGglwL/V9IjwDeA+yPi\ni924kG7actnZqdU2054H5xLNei3rey7vhd5cpC2jm2cO8MndTy2briTSpy/VFpkys+5LKvjWyNqJ\nAhNrVg/9NOtmirS5ZENGH9h8Hh++5oJlpZfrfWQ66Jv1Xm2J9MnxAmsnCnXvzJ89tpC7cs/u8bfB\npWLNhkfa+zXJ1OQ4D2+9tMst6iz3+Lukdq7+pnPWURhb2Zd47qeLI99jMBs2SWVT0oz6xAwXaUuQ\ntEoXVs7Vv2dvkdWrxMLx5XdNCyfCy8LNBkxSyYfnf7aYufDbKHHgr5G2YcqLVq9KnKufZtR7DGbD\nqLbkQ9ruX6NePNGBv0baYqxmZgnA6PcYzEZBXosnOvDXaLanvnaiwE8XTuSux2A2KvJYPNGDuzXS\neuqnrBlLrAX+vrecu2z62NTkuKdymtlAc4+/xqZz1vGJ3U+teH7+heO88zUbeOjxo4m3hA70ZqOn\nE+XYB5EDf420Ak4nyq8N29xeM2tN2kQPGP6OnlM9Nerl+D1Txyw/RrnqrgN/jXqzcTxTxyw/0jp6\no9ABdOCvseWysxNX4xZWyTN1zHIkraM3Ch1AB/4amzdOsf3q81lbtX3b5HiB7b9z/tDn9cwsu6QS\nD6MyVduDuwnyOK/XzJYb5cVdDvxmZilGtROYKdUj6XJJhyQdlrQ14fWrJD0qab+kWUmXZD130NVW\n5HTVTTMbdg17/JLGKG2n+EbgCLBH0s6IeKzqsL8BdkZESHoF8BngnIznDqxRnsdrZvmVpcd/IXA4\nIp6IiBeAu4Crqg+IiOfi5I4up3ByR8KG5w6yUZ7Ha2b5lSXwTwFPVz0+Un5uGUlvk/Q4cD/wB82c\nWz7/+nKaaPbo0eTVs702yvN4zSy/OjadMyLui4hzgM3An7Vw/o6ImI6I6XXr1nWqWamy5O5HeR6v\nmeVXllk9RWB91ePTy88lioivSvpVSac2e26vZMndz+wr8vzPFlecOyrzeM0sv7L0+PcAZ0k6U9Ia\n4FpgZ/UBkn5dkspfvxJ4EfDDLOf2Q6PcfeWDoXZLtrUTBZdcNrOh17DHHxGLkm4EdgFjwJ0RcVDS\nDeXXbwfeAfy+pAVgHrimPNibeG6XriWzRrn7pA8GgIk1qx30zWzo6eRknMExPT0ds7OzXfv+G2/9\nEs8eW7nB8pjEiQjSfiMCntx2ZdfaZWbWKkl7I2I6y7G5Wrk7s6/I+z93MDHoAxxv8CHoQV0zqxjm\nTVpyE/hrB3Sb5UFdM6sY9sWduQn8aXn7RgRD92luZp2R1quvN0FkGOJEbgJ/sYVFV1OT48u2Whzm\nWzsza069Xv2wL+7MTT3+Ma3cXKWisEorNl+pTe1U/giKc/MEJ/8IXLTNbDTV69UP++LO3AT+egO3\nhTGxcPzk60nz9V23xywfKqv607IE35ubH/pNWnKT6pmaHE/9hzy2cGLZ4+cSVuwO+62dmTWWZRLI\naZPjQ79JS24C/6Zz1vGJ3U9lOnbheKwYpDkt5YNjWG7tzKyxRpNAqnv1w7xJy8gG/tqB2Gef/1lT\n59f25LdcdvaKnsAw3dqZWWP17uCnhqxXX89IBv6k0fhm1fbkh/3WzswaS7uzr53hN+xGMvC3Ome/\nojCmxJ78MN/amY2Sbk2tzsud/UgG/mYHXMXJLcPWThR431vOdYA3G1DdXDWblzv7kQz8abdr9XzH\nxdfMhkK3V83m4c5+JOfxJ82xrWeVtGwhVpbducysPwZ1avUwxY2R7PFXPq1vunt/puOPRyzdKgJD\nXXzJbNQN4tTqYSvalqnHL+lySYckHZa0NeH1d0l6VNIBSV+TdH7Va98pP79fUveK7NfYvHGKyfFC\n5uMrt4peoWs22FpdNduNHnnle9509/6hihsNA7+kMeA24M3Ay4HrJL285rAngd+MiPMobbS+o+b1\nTRFxQdZNAjrllree21Qu63tz8wN7G2lmJZs3TvHBt5/H1OQ4ojTVstGWqN2otVX9PdMMatzIkuq5\nEDgcEU8ASLoLuAp4rHJARHyt6vjdlDZV77vKH8ItOw+u2D83SeVWcdBuI81suWYHYLsxIJxl2ngA\nv/aeB7juovV8YPN5Lf2cbsjSIZ4Cnq56fKT8XJo/BL5Q9TiAr0jaK+n65pvYns0bp7jlrefWrc4J\nJ28Vh734kpmtlNbzLs7Nt9zrz9qbPx7BJ3Y/xc0zBxof3CMdndUjaROlwP/uqqcviYgLKKWK/ljS\n61LOvV7SrKTZo0ePdqxNlduxetU5J8dPVuNs5TbSzAZbvTv2VlM+zWYBPv31pxsf1CNZUj1FYH3V\n49PLzy0j6RXAHcCbI+KHlecjolj+/zOS7qOUOvpq7fkRsYPy2MD09HTHdoBvdDs2OV5g//vetOy5\nPMzjNcuTpBW5Fa2mfNJW+abFm0Z7evdSlh7/HuAsSWdKWgNcC+ysPkDSBuBe4Pci4ttVz58i6Rcq\nXwNvAr7ZqcZnUe92bLwwxi1vPbeHrTGzfqjcyadpZRA2LTuQllZulG7upYY9/ohYlHQjsAsYA+6M\niIOSbii/fjvwXuAXgY+pdHGL5Rk8LwXuKz+3GvhURHyxK1dSVlvD48XjhcSB3THJKRyzHKnsldvq\n5I20+kC1MWT2uz9KLAF/3UXrVzzXL4oBuv2omJ6ejtnZ5qf8J22iUBgTBCycOHmd44UxB32zHEqK\nEVniQbPn3TxzgE9//WmORzAm9WRWj6S9WafMj1TgT9sube1EgYk1q0e66JKZZdNKZc+02DJI5Zqb\nCfwjVbJtNbdnAAAGXUlEQVQhLU83d2yBfe99U+JrZpYvrUzeGLWFnSNVpC0tT+fFV2bWjsmJ5PIv\nac8PupEK/F58ZWbdkJYRH8BMeSYjlerJyyYKZtZbP04p+ZL2/KAbqcAPXnxlZp03iKWg2zFSqR4z\ns24YtTTyyPX4zcw6bdTSyA78ZmYZdCKN3Moagm5w4Dcz64FB2p7ROX4zsx4YpG1dHfjNzHpgkFb/\nOvCbmfXAIFUWcOA3M+uBQZoS6sFdM7MeGKQpoZkCv6TLgT+ntBHLHRGxreb1d1HaZ1fAT4A/iohH\nspxrZpYXtVNCZ/YVuXjbgz3/IGgY+CWNAbcBbwSOAHsk7YyIx6oOexL4zYh4VtKbKe2de1HGc83M\ncqef0zuz5PgvBA5HxBMR8QJwF3BV9QER8bWIeLb8cDelDdkznWtmlkf9nN6ZJfBPAU9XPT5Sfi7N\nHwJfaPFcM7Nc6Of0zo7O6pG0iVLgf3cL514vaVbS7NGjRzvZLDOzgdPP6Z1ZAn8RqN4e/vTyc8tI\negVwB3BVRPywmXMBImJHRExHxPS6deuytN3MbGj1c3pnlsC/BzhL0pmS1gDXAjurD5C0AbgX+L2I\n+HYz55qZ5dHmjVN88O3nMTU5jiht3P7Bt583GLN6ImJR0o3ALkpTMu+MiIOSbii/fjvwXuAXgY9J\nAlgs994Tz+3StZiZDZV+bRylGMBNI6enp2N2drbfzTAzGxqS9kbEdJZjXbLBzCxnHPjNzHLGgd/M\nLGcc+M3McsaB38wsZxz4zcxyxoHfzCxnHPjNzHLGgd/MLGcc+M3McsaB38wsZwayVo+ko8B3+92O\nBk4FftDvRnRZHq4R8nGdvsbRkXadL4uITDXtBzLwDwNJs1kLIg2rPFwj5OM6fY2joxPX6VSPmVnO\nOPCbmeWMA3/rdvS7AT2Qh2uEfFynr3F0tH2dzvGbmeWMe/xmZjnjwJ+RpJdI+rKkfyr/f22dY8ck\n7ZP0+V62sV1ZrlHSekkPSXpM0kFJ/6EfbW2WpMslHZJ0WNLWhNcl6X+UX39U0iv70c52ZbjOd5Wv\n74Ckr0k6vx/tbEeja6w67tWSFiVd3cv2dUKWa5T0ekn7y+/Dv2vqB0SE/8vwH/Dfga3lr7cCH6pz\n7H8EPgV8vt/t7vQ1Ar8CvLL89S8A3wZe3u+2N7iuMeCfgV8F1gCP1LYZuAL4AiDgNcDX+93uLl3n\na4G15a/fPGzXmeUaq457EHgAuLrf7e7Cv+Mk8Biwofz4l5r5Ge7xZ3cV8Jflr/8S2Jx0kKTTgSuB\nO3rUrk5qeI0R8f2I+Mfy1z8BvgVM9ayFrbkQOBwRT0TEC8BdlK612lXAX0XJbmBS0q/0uqFtanid\nEfG1iHi2/HA3cHqP29iuLP+WAH8C3AM808vGdUiWa3wncG9EPAUQEU1dpwN/di+NiO+Xv/5/wEtT\njvsI8F+AEz1pVWdlvUYAJJ0BbAS+3t1mtW0KeLrq8RFWflhlOWbQNXsNf0jpLmeYNLxGSVPA24C/\n6GG7OinLv+NvAGsl/a2kvZJ+v5kfsLrNBo4USV8Bfjnhpf9a/SAiQtKK6VCSfht4JiL2Snp9d1rZ\nnnavser7/DylHtVNEfGvnW2ldZukTZQC/yX9bksXfAR4d0SckNTvtnTLauBVwBuAceAfJO2OiG9n\nPdnKIuK30l6T9C+SfiUivl9OASTdWl0MvFXSFcDPAf9G0ici4ne71OSmdeAakVSgFPQ/GRH3dqmp\nnVQE1lc9Pr38XLPHDLpM1yDpFZRSkW+OiB/2qG2dkuUap4G7ykH/VOAKSYsRMdObJrYtyzUeAX4Y\nEc8Dz0v6KnA+pTG3xvo9kDEs/wHbWT7w+d8bHP96hm9wt+E1Uhr8/CvgI/1ubxPXtRp4AjiTk4Nl\n59YccyXLB3e/0e92d+k6NwCHgdf2u73dusaa4z/O8A3uZvl3/LfA35SPnQC+Cfy7rD/DOf7stgFv\nlPRPwG+VHyPpNEkP9LVlnZPlGi8Gfg+4tDyVbH/5DmdgRcQicCOwi9Jg9Gci4qCkGyTdUD7sAUpv\ntsPA/wb+fV8a24aM1/le4BeBj5X/7Wb71NyWZLzGoZblGiPiW8AXgUeBbwB3RMQ3s/4Mr9w1M8sZ\n9/jNzHLGgd/MLGcc+M3McsaB38wsZxz4zcxyxoHfzCxnHPjNzHLGgd/MLGf+P5aEw2z2i6F6AAAA\nAElFTkSuQmCC\n",
       "text/plain": [
-       "array([[ 1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.]])"
+       "<matplotlib.figure.Figure at 0x9084cc0>"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "np.eye(4)"
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(1,1,1)\n",
+    "ax.scatter( train_x[:,0].reshape(-1),train_x[:,1].reshape(-1) )\n",
+    "plt.show()"
    ]
   },
   {
